every thing is awesome
it was awesome

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -3,9 +3,10 @@
 /KnockKnockRecipe
 /LastSummerRecipe
 /MorningZombieRecipe
+/RobotGraffiti.class
 /RobotGraffitiRecipe
 /RobotSquare.class
-/robot.jar
-/RobotGraffiti.class
-/rngjtjyjtgsrhgyj.class
 /knokno.class
+/rngjtjyjtgsrhgyj.class
+/robot.jar
+/everythingisawesome.class
